Full will application

--- a/src/sass/modules/_variables.scss
+++ b/src/sass/modules/_variables.scss
@@ -1,8 +1,11 @@
 $white: #FFFFFF;
 $owhite: #F4F6FA;
+$owhite2: #FBFCFD;
+$bg: #F2F5FA;
 $black:  #000000;
 $blue: #2585C6;
 $dblue: #246693;
+$dblue2: #13476B;
 $lblue: #2FABFF;
 $link-blue: #2C98D1;
 $green: #00BF69;
@@ -12,8 +15,11 @@ $dyellow: #D8CA16;
 $red: #FF0120;
 $dred: #D0021B;
 $grey: #4A4A4A;
+$p-color: #404040;
 $lgrey: #9B9B9B;
 $lgrey2: #E1E1E1;
+$lgrey3: #B5B5B5;
+$lblue2: #F2FAFF;
 
 $container-width: 1200px;
 $contain: 0 10px;
